# codium_test_task

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_23_1326-d8e7c250588e_create_requests_table.py
kafka_home/: .env  __init__.py  config.py  exceptions.py  settings.py
src/: .env.template  main.py
src/api/v1/: __init__.py
src/api/v1/requests/: exceptions.py  filters.py  repository.py  schemas.py  service.py  views.py
src/core/: settings.py
src/core/config/: __init__.py  exception_handler_config.py  rate_limiter.py  swagger_config.py
src/core/models/: __init__.py  base.py  request.py
src/tools/: base_custom_settings.py  base_errors.py  redis_cache_decorator.py
